# ng-analyzer

./: .gitignore  Cargo.toml  README.md  artifact.md  build-test.sh  test_search.sh
examples/: search_examples.md
src/: main.rs
src/analyzers/: component.rs  dependency.rs  dependency_graph.rs  mod.rs  performance.rs  state.rs
src/ast/: mod.rs
src/cli/: args.rs  commands.rs
src/config/: mod.rs  rules.rs
src/output/: graph.rs  html.rs  json.rs  mod.rs  table.rs
src/parsers/: html.rs  mod.rs  project.rs  typescript.rs
src/search/: mod.rs  simple.rs
tests/fixtures/: sample-app.ts  sample-component.ts  sample-main.ts  sample-service.ts  sample-utils.ts
tests/integration/: mod.rs
