[package]
name = "ng-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A powerful Angular project analyzer built with Rust"
license = "MIT"
repository = "https://github.com/your-org/ng-analyzer"
keywords = ["angular", "typescript", "analysis", "cli", "performance"]

[[bin]]
name = "ng-analyzer"
path = "src/main.rs"

[dependencies]
# CLI フレームワーク
clap = { version = "4.0", features = ["derive"] }
# 非同期処理
tokio = { version = "1.0", features = ["full"] }
# JSON/設定ファイル
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ファイル操作
walkdir = "2.3"
ignore = "0.4"
# TypeScript/JavaScript解析
swc_ecma_parser = "0.140"
swc_ecma_ast = "0.109"
swc_common = "0.32"
# HTML解析
html5ever = "0.26"
markup5ever_rcdom = "0.2"
# レポート生成
tabled = "0.12"
# 並行処理
rayon = "1.7"
# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"
# 非同期トレイト
async-trait = "0.1"
# メモリマップ
memmap2 = "0.9"
# 正規表現
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"